--- a/Frontend/frontend-app/src/app/app.component.html
+++ b/Frontend/frontend-app/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div align="center">
+    <h2> HOSPITAL MANAGEMENT SYSTEM </h2>
+<hr/>
+    <router-outlet></router-outlet>
+</div>
+
