--- a/Frontend/frontend-app/src/app/apply-job/apply-job.component.html
+++ b/Frontend/frontend-app/src/app/apply-job/apply-job.component.html
@@ -1,21 +1,50 @@
-<div>
+<div class="card">
+    <div class="row g-0">
+      <div class="col-5 col-sm-4">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKSKZAjhvx8hXirONsn8XnE4F8-piwOG0v6w&usqp=CAU" class="img-fluid w-100" alt="card-horizontal-image">
+      </div>
+            <div class="col-7 col-sm-8">
+                <div class="card-body">
+                    <h5 class="card-title">Apply Job</h5>
     <form [formGroup]="doctorRef" (ngSubmit)="applyjob()">
+        <div class="form-group">
         <label>Doctor Name</label>
-        <input type="text" formControlName="dname"><br/>
+        <input type="text" id="name" formControlName="dname"><br/>
+        </div>
+        <div class="form-group">
         <label>Age</label>
-        <input type="number" formControlName="dage"><br/>
+        <input type="number" id="age" formControlName="dage"><br/>
+    </div>
+    <div class="form-group">
         <label>Phone Number</label>
-        <input type="number" formControlName="phno"><br/>
-        <label>Gender</label>
-        <input type="text" formControlName="dgender"><br/>
+        <input type="number" id="ph" formControlName="phno"><br/>
+    </div>
+        
+        <label> Gender </label><br/>
+        <input type="radio" id="m" name="Gender" value="Male" formControlName="dgender"/>Male
+        <input type="radio" id="f" name="Gender" value="Female" formControlName="dgender"/>Female<br/>
+   
+        <div class="form-group">
         <label>Email Id</label>
-        <input type="text" formControlName="emailid"><br/>
+        <input type="text" id="emid" formControlName="emailid"><br/>
+    </div>
+        <div class="form-group">
         <label>Address</label>
-        <input type="text" formControlName="daddress"><br/>
+        <input type="text" id="add" formControlName="address"><br/>
+    </div>
+        <div class="form-group">
         <label>Specialization</label>
-        <input type="text" formControlName="specialization"><br/>
-        <input type="submit" value="Apply Job"/><br/>
-        <input type="reset" value="reset"/><br/>
+        <input type="text" id="spe" formControlName="specialization"><br/>
+    </div>
+        <div class="form-group" >
+        <input type="submit" id="aj" value="Apply Job" class="btn btn-success"/><br/>
+    </div>
+        <div class="form-group" >
+        <input type="reset" value="reset" class="btn btn-secondary"/><br/>
+    </div>
     </form><br/>
     <span style="color:red">{{storeMsg}}</span>
+</div>
+</div>
+</div>
 </div>
