--- a/Frontend/frontend-app/src/app/doctor-patients/doctor-patients.component.html
+++ b/Frontend/frontend-app/src/app/doctor-patients/doctor-patients.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table border="1">
+    <table border="1" class="table table-striped">
         <tr>
             <th>Patient Name</th>
             <th>Symptoms </th>
@@ -9,7 +9,6 @@
             <td>{{patient.pname}}</td>
             <td>{{patient.symptoms}}</td>
             <td>{{patient.mobile}}</td>
-            <td><button (click) = "deletePatient(patient)"> </button></td>
         </tr>
     </table>
 </div>
