--- a/Frontend/frontend-app/src/app/doctor/doctor.component.html
+++ b/Frontend/frontend-app/src/app/doctor/doctor.component.html
@@ -1,8 +1,8 @@
-<div>
-  <button (click) = "getdid"> View Id </button>
-  <button (click) = "viewappointments"> View Appointments </button>
-  <button (click) = "viewpatients"> View Patients </button>
-  <button (click) = "deletappointment"> Delete Appointment </button>
-  <button (click) = "viewdischargedpatient"> View Discharged Paient </button>
-  <button (click) = "applyjob"> Apply Job </button>
+<div align="center">
+ 
+  <button class="btn btn-success "><a routerLink="viewApp"> View Appointments </a></button>
+  <button class="btn btn-success "><a routerLink="viewPat"> View Patients </a></button>
+  <button class="btn btn-success "><a routerLink="dispat"> Discharged Patient </a></button>
+  <button class="btn btn-success "><a routerLink="getid"> Save Id </a></button>
+        <router-outlet></router-outlet>
 </div>
