--- a/Frontend/frontend-app/src/app/view-id/view-id.component.html
+++ b/Frontend/frontend-app/src/app/view-id/view-id.component.html
@@ -1,1 +1,7 @@
-<p>view-id works!</p>
+<div>
+    <input type="email" id="em" name="email" [(ngModel)]="email"/>
+    <button (click)="viewid(email)" id="id">View Id</button> <br/>
+    <span>
+       {{msg}}
+    </span>
+</div>
