--- a/Frontend/frontend-app/src/app/get-docid/get-docid.component.html
+++ b/Frontend/frontend-app/src/app/get-docid/get-docid.component.html
@@ -1,5 +1,4 @@
 <div>
-    Doctor Id: <input type="number" name="doctorid" [(ngModel)]="user"/>
-    <button (click)="storeid()"> Save </button><br/>
-    {{msg}}
+    Doctor Id: <input type="number" name="doctorid" [(ngModel)]="user" id="user"/>
+    <button (click)="storeid()" id="save"> Save </button>
 </div>
