--- a/Frontend/frontend-app/src/app/doctor/doctor.component.html
+++ b/Frontend/frontend-app/src/app/doctor/doctor.component.html
@@ -5,4 +5,6 @@
   <button class="btn btn-success " id="dpt"><a routerLink="dispat"> Discharged Patient </a></button>
   <button class="btn btn-success " id="sid"><a routerLink="getid"> Save Id </a></button>
         <router-outlet></router-outlet>
+        <hr/>
+  <button (click)="logout()" class="btn btn-success" id="sid"><a routerLink="">  LogOut </a></button>
 </div>
