--- a/Frontend/frontend-app/src/app/Patient/patient/patient.component.html
+++ b/Frontend/frontend-app/src/app/Patient/patient/patient.component.html
@@ -1,7 +1,8 @@
 <div align="center">
- 
-    <button class="btn btn-success pull-right"><a routerLink="appointment"> Book Appointment </a></button>
-    <button class="btn btn-success pull-right"><a routerLink="viewdoc"> View Doctor </a></button>
-    <button class="btn btn-success pull-right"><a routerLink="savepat"> Save Patient </a></button>
+    <button class="btn btn-success "><a routerLink="getpatid"> Save Id </a></button>
+    <button class="btn btn-success "><a routerLink="appointment"> Book Appointment </a></button>
+    <button class="btn btn-success "><a routerLink="viewdoc"> View Doctor </a></button>
+    <button class="btn btn-success "><a routerLink="savepat"> Save Patient </a></button>
+    <button class="btn btn-success " (click)="logout"><a routerLink=" "> Logout </a></button>
           <router-outlet></router-outlet>
   </div>
