--- a/Frontend/frontend-app/src/app/apply-job/apply-job.component.html
+++ b/Frontend/frontend-app/src/app/apply-job/apply-job.component.html
@@ -44,6 +44,9 @@
     </div>
     </form><br/>
     <span style="color:red">{{storeMsg}}</span>
+    <div class="form-group" >
+        <div class="form-group"><p> Back <button class="btn btn-outline-secondary"><a routerLink="/login" style="color: black; text-decoration:none">Login</a></button> </p></div>
+    </div>
 </div>
 </div>
 </div>
