--- a/Frontend/frontend-app/src/app/view-id/view-id.component.html
+++ b/Frontend/frontend-app/src/app/view-id/view-id.component.html
@@ -4,4 +4,7 @@
     <span>
        {{msg}}
     </span>
+    <div class="form-group" >
+        <div class="form-group"><p> Back <button class="btn btn-outline-secondary"><a routerLink="/login" style="color: black; text-decoration:none">Login</a></button> </p></div>
+    </div>
 </div>
